--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,5 +10,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@3
-            - run: docker build . --file Dockerfile --tag delivery-service:latest
-    
+            - name: Build dockerfile
+              run: docker build . --file Dockerfile --tag getmovie:latest
+
+            - name: Push to dockerhub
+              uses: docker/login-action@v3.0.0
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Push tag to DockerHub
+              run: docker push ${{ secrets.DOCKER_USERNAME }}/getmovie:latest
