--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ jobs:
     build-and-push:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@3
+            - uses: actions/checkout@v3
             - name: Build dockerfile
               run: docker build . --file Dockerfile --tag getmovie:latest
 
