--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: Build dockerfile
-              run: docker build . --file Dockerfile --tag getmovie:latest
+              run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getmovie:latest
 
             - name: Push to dockerhub
               uses: docker/login-action@v3.0.0
