--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -3,7 +3,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    build-and-push:
+    build-and-push-to-yc:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -17,3 +17,17 @@ jobs:
                 password: ${{ secrets.YC_KEYS }}
             - name: Push tag to YC Registry
               run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getmovie:latest 
+    deploy:
+        name: Deploy
+        runs-on: ubuntu-latest
+        needs: [build-and-push-to-yc]
+        steps:
+          - name: Deploy serverless container
+            uses: yc-actions/yc-sls-container-deploy@v1
+            with:
+              yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
+              container-name: ${{ secrets.YC_CONTAINER_NAME }}
+              folder-id: ${{ secrets.YC_FOLDER_ID }}
+              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/deliveryservice:latest
+              revision-service-account-id: ${{ secrets.YC_SA_ID }}
+              
