--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -28,6 +28,6 @@ jobs:
               yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
               container-name: ${{ secrets.YC_CONTAINER_NAME }}
               folder-id: ${{ secrets.YC_FOLDER_ID }}
-              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/deliveryservice:latest
+              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getmovie:latest
               revision-service-account-id: ${{ secrets.YC_SA_ID }}
               
