--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,21 @@ on:
     workflow_dispatch:
 
 jobs:
+    test:
+        runs-on: ubunti latest
+        steps:
+          - name: Prepare for tests
+            run: |
+              sudo apt update
+              sudo apt install -y python3-pip
+              pip install -r requirements.txt
+          - name: Run tests
+            run: |
+              pytest component_test.py
+              pytest integration_test.py
+
     build-and-push:
+        needs: [test]
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -19,3 +33,4 @@ jobs:
                 password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Push tag to DockerHub
               run: docker push ${{ secrets.DOCKER_USERNAME }}/getmovie:latest
+    
