--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
               sudo apt update
               sudo apt install -y python3-pip
               pip install -r requirements.txt
-              python .\main.py
+              python main.py
           - name: Run tests
             run: |
               pytest component_test.py
