--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,7 @@ jobs:
               sudo apt install -y python3-pip
               pip install -r requirements.txt
               python main.py
+              sleep 5
           - name: Run tests
             run: |
               pytest component_test.py
