--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,8 @@ jobs:
               sudo apt update
               sudo apt install -y python3-pip
               pip install -r requirements.txt
-              python main.py
+              docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getmovie:latest
+              docker run -p 80:80 -d ${{ secrets.DOCKER_USERNAME }}/getmovie:latest
               sleep 5
           - name: Run tests
             run: |
